--- a/day4-evening/day4_evening_assignment.ipynb
+++ b/day4-evening/day4_evening_assignment.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "[26431 rows x 8 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
        "[396 rows x 3 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
        "Name: Proband_id, Length: 396, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
        "Name: Proband_id, Length: 396, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
        "Name: Proband_id, Length: 396, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
        "[396 rows x 4 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +824,7 @@
        "[396 rows x 6 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +863,7 @@
        "Name: mat_dnm, Length: 396, dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,7 @@
        "Name: Mother_age, Length: 396, dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +963,7 @@
        "Name: mat_dnm, Length: 396, dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +995,7 @@
        "Name: Mother_age, Length: 396, dtype: int64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1061,10 +1061,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   116.0</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Thu, 02 Sep 2021</td> <th>  Prob (F-statistic):</th> <td>6.88e-24</td>\n",
+       "  <th>Date:</th>             <td>Fri, 03 Sep 2021</td> <th>  Prob (F-statistic):</th> <td>6.88e-24</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>18:21:41</td>     <th>  Log-Likelihood:    </th> <td> -1158.1</td>\n",
+       "  <th>Time:</th>                 <td>09:33:25</td>     <th>  Log-Likelihood:    </th> <td> -1158.1</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>   396</td>      <th>  AIC:               </th> <td>   2320.</td>\n",
@@ -1113,8 +1113,8 @@
        "Dep. Variable:                mat_dnm   R-squared:                       0.228\n",
        "Model:                            OLS   Adj. R-squared:                  0.226\n",
        "Method:                 Least Squares   F-statistic:                     116.0\n",
-       "Date:                Thu, 02 Sep 2021   Prob (F-statistic):           6.88e-24\n",
-       "Time:                        18:21:41   Log-Likelihood:                -1158.1\n",
+       "Date:                Fri, 03 Sep 2021   Prob (F-statistic):           6.88e-24\n",
+       "Time:                        09:33:25   Log-Likelihood:                -1158.1\n",
        "No. Observations:                 396   AIC:                             2320.\n",
        "Df Residuals:                     394   BIC:                             2328.\n",
        "Df Model:                           1                                         \n",
@@ -1136,7 +1136,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 56,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1149,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1160,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1203,10 +1203,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   639.6</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Thu, 02 Sep 2021</td> <th>  Prob (F-statistic):</th> <td>1.55e-84</td>\n",
+       "  <th>Date:</th>             <td>Fri, 03 Sep 2021</td> <th>  Prob (F-statistic):</th> <td>1.55e-84</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>18:26:03</td>     <th>  Log-Likelihood:    </th> <td> -1406.6</td>\n",
+       "  <th>Time:</th>                 <td>09:33:25</td>     <th>  Log-Likelihood:    </th> <td> -1406.6</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>   396</td>      <th>  AIC:               </th> <td>   2817.</td>\n",
@@ -1255,8 +1255,8 @@
        "Dep. Variable:                pat_dnm   R-squared:                       0.619\n",
        "Model:                            OLS   Adj. R-squared:                  0.618\n",
        "Method:                 Least Squares   F-statistic:                     639.6\n",
-       "Date:                Thu, 02 Sep 2021   Prob (F-statistic):           1.55e-84\n",
-       "Time:                        18:26:03   Log-Likelihood:                -1406.6\n",
+       "Date:                Fri, 03 Sep 2021   Prob (F-statistic):           1.55e-84\n",
+       "Time:                        09:33:25   Log-Likelihood:                -1406.6\n",
        "No. Observations:                 396   AIC:                             2817.\n",
        "Df Residuals:                     394   BIC:                             2825.\n",
        "Df Model:                           1                                         \n",
@@ -1278,7 +1278,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 59,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1302,7 +1302,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1327,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -1365,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1374,7 +1374,7 @@
        "Ttest_indResult(statistic=-53.403565287269245, pvalue=2.1986031793078793e-264)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1392,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1419,10 +1419,10 @@
        "  <th>Method:</th>                 <td>MLE</td>       <th>  Df Model:          </th>  <td>     1</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>            <td>Thu, 02 Sep 2021</td> <th>  Pseudo R-squ.:     </th>  <td>0.07164</td> \n",
+       "  <th>Date:</th>            <td>Fri, 03 Sep 2021</td> <th>  Pseudo R-squ.:     </th>  <td>0.07164</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                <td>18:48:44</td>     <th>  Log-Likelihood:    </th> <td> -1159.5</td> \n",
+       "  <th>Time:</th>                <td>09:33:25</td>     <th>  Log-Likelihood:    </th> <td> -1159.5</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>converged:</th>             <td>True</td>       <th>  LL-Null:           </th> <td> -1248.9</td> \n",
@@ -1451,8 +1451,8 @@
        "Dep. Variable:                mat_dnm   No. Observations:                  396\n",
        "Model:                        Poisson   Df Residuals:                      394\n",
        "Method:                           MLE   Df Model:                            1\n",
-       "Date:                Thu, 02 Sep 2021   Pseudo R-squ.:                 0.07164\n",
-       "Time:                        18:48:44   Log-Likelihood:                -1159.5\n",
+       "Date:                Fri, 03 Sep 2021   Pseudo R-squ.:                 0.07164\n",
+       "Time:                        09:33:25   Log-Likelihood:                -1159.5\n",
        "converged:                       True   LL-Null:                       -1248.9\n",
        "Covariance Type:            nonrobust   LLR p-value:                 8.241e-41\n",
        "==============================================================================\n",
@@ -1464,7 +1464,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 72,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1484,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1511,10 +1511,10 @@
        "  <th>Method:</th>                 <td>MLE</td>       <th>  Df Model:          </th>   <td>     1</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>            <td>Thu, 02 Sep 2021</td> <th>  Pseudo R-squ.:     </th>   <td>0.2277</td>  \n",
+       "  <th>Date:</th>            <td>Fri, 03 Sep 2021</td> <th>  Pseudo R-squ.:     </th>   <td>0.2277</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                <td>18:48:58</td>     <th>  Log-Likelihood:    </th>  <td> -1417.1</td> \n",
+       "  <th>Time:</th>                <td>09:33:25</td>     <th>  Log-Likelihood:    </th>  <td> -1417.1</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>converged:</th>             <td>True</td>       <th>  LL-Null:           </th>  <td> -1834.9</td> \n",
@@ -1543,8 +1543,8 @@
        "Dep. Variable:                pat_dnm   No. Observations:                  396\n",
        "Model:                        Poisson   Df Residuals:                      394\n",
        "Method:                           MLE   Df Model:                            1\n",
-       "Date:                Thu, 02 Sep 2021   Pseudo R-squ.:                  0.2277\n",
-       "Time:                        18:48:58   Log-Likelihood:                -1417.1\n",
+       "Date:                Fri, 03 Sep 2021   Pseudo R-squ.:                  0.2277\n",
+       "Time:                        09:33:25   Log-Likelihood:                -1417.1\n",
        "converged:                       True   LL-Null:                       -1834.9\n",
        "Covariance Type:            nonrobust   LLR p-value:                1.004e-183\n",
        "==============================================================================\n",
@@ -1556,7 +1556,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 73,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1576,22 +1576,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4.40735"
+       "0    82.031316\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "3.1903 + 0.0241 * 50.5"
+    "new_observation=pd.DataFrame({\"Father_age\" : [50.5]})\n",
+    "results_patp.predict(new_observation)"
    ]
   },
   {
